<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dialog_map"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_category_default"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_post_ad"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/nav_post_ad" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_dialog_email"
            android:title="@string/nav_messages" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/star_big_on"
            android:title="@string/nav_favorites" />


    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_dialog_info"
            android:title="@string/nav_help" />
    </group>

</menu>
