<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView_main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_App_Name"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin_lg"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_main_logo" />

    <TextView
        android:id="@+id/textView_App_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:text="@string/slide_1_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editText_email"
        style="@style/SignInTheme"
        android:drawableLeft="@drawable/ic_action_mail"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_password"
        style="@style/SignInTheme"
        android:drawableLeft="@drawable/ic_action_lock_closed"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_email_password_sign_in"
        style="@style/SignInTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin_lg"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/btn_sign_in"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="visible"
            tools:visibility="gone" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/connectWithFbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/facebook_connect" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin_lg"
        android:layout_marginTop="@dimen/activity_vertical_margin_lg"
        android:text="@string/textView_orDivider"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorwhite" />

    <Button
        android:id="@+id/btn_create_account"
        style="@style/SignInTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/btn_create_account"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium" />


</LinearLayout>