<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_main_logo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold"
        android:layout_below="@+id/iv_main_logo"
        android:layout_centerHorizontal="true" />


    <EditText
        android:id="@+id/et_email"
        style="@style/SignInTheme"
        android:drawableLeft="@drawable/ic_action_mail"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/et_password"
        android:layout_alignLeft="@+id/btn_create_account"
        android:layout_alignStart="@+id/btn_create_account" />

    <EditText
        android:id="@+id/et_password"
        style="@style/SignInTheme"
        android:drawableLeft="@drawable/ic_action_lock_closed"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_above="@+id/btn_email_password_sign_in"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email" />

    <Button
        android:id="@+id/btn_email_password_sign_in"
        style="@style/SignInTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/btn_sign_in"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_above="@+id/tv_forgot_password"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:layout_above="@+id/btn_facebook_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/facebook_connect"
        android:layout_above="@+id/btn_google_sign_in"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        android:layout_above="@+id/tv_or_descriptor"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_or_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/textView_orDivider"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorwhite"
        android:layout_above="@+id/btn_create_account"
        android:layout_alignRight="@+id/iv_main_logo"
        android:layout_alignEnd="@+id/iv_main_logo" />

    <Button
        android:id="@+id/btn_create_account"
        style="@style/SignInTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/btn_create_account"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium" />


</RelativeLayout>